--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         api-level: [29]         # Android 10
         target: [google_apis]
-        profile: [Pixel_3a]
+        profile: [Pixel_8]
 
     steps:
       - name: Checkout code
