--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 jobs:
   build:
-    runs-on: macos-latest
+    runs-on: macos-12
 
     strategy:
       matrix:
@@ -53,7 +53,7 @@ jobs:
         with:
           api-level: ${{ matrix.api-level }}
           target: ${{ matrix.target }}
-          arch: arm64-v8a
+          arch: x86_64
           profile: ${{ matrix.profile }}
           disable-animations: true
           emulator-options: '-no-window'
