--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -4,9 +4,10 @@ on:
   push:
     branches: [ main ]
   workflow_dispatch:
+
 jobs:
   build:
-    runs-on: macos-12
+    runs-on: ubuntu-latest
 
     strategy:
       matrix:
@@ -58,3 +59,4 @@ jobs:
           disable-animations: true
           emulator-options: '-no-window'
           script: mvn clean test -Pandroid
+
