--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,70 +1,38 @@
-name: Java CI with Maven + Appium (Android 10)
+name: Run Android Instrumented Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   workflow_dispatch:
 
 jobs:
-  build:
+  instrumented-tests:
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        api-level: [ 29 ]
-        target: [ google_apis_playstore ]  # <- muda aqui
-        profile: [ pixel_5 ]
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Set up JDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v4
         with:
-          java-version: '17'
           distribution: 'temurin'
+          java-version: 17
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '18'
+      - name: Decode keystore if needed (opcional)
+        run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
+        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
 
-      - name: Install and Start Appium
-        run: |
-          npm install -g appium@v2.5.2
-          nohup appium -pa /wd/hub > appium.log 2>&1 &
-          echo "Starting Appium..."
-          for i in {1..10}; do
-            if curl -s http://127.0.0.1:4723/wd/hub/status | grep -q '"ready":true'; then
-              echo "✅ Appium is ready!"
-              break
-            fi
-            echo "⌛ Waiting for Appium to be ready..."
-            sleep 5
-          done
-          if ! curl -s http://127.0.0.1:4723/wd/hub/status | grep -q '"ready":true'; then
-            echo "❌ Appium failed to start in time."
-            cat appium.log
-            exit 1
-          fi
+      - name: Set up Android SDK
+        uses: android-actions/setup-android@v3
 
-      - name: Run Appium Tests
+      - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: ${{ matrix.api-level }}
-          target: ${{ matrix.target }}
+          api-level: 29
+          target: google_apis_playstore
           arch: x86_64
-          profile: ${{ matrix.profile }}
+          profile: pixel_5
+          emulator-options: -no-window -gpu swiftshader_indirect -no-audio
           disable-animations: true
-          emulator-options: '-no-window'
-          enable-hw-keyboard: false
-          disable-spellchecker: true
-          cores: 2
-          avd-name: test
-          force-avd-creation: true
-          emulator-boot-timeout: 600
-          emulator-port: 5554
-          disable-linux-hw-accel: auto
-          channel: stable
-          script: mvn clean test -Pandroid   # <-- Adicione essa linha
+          script: ./gradlew connectedDebugAndroidTest
