--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -20,8 +20,8 @@ jobs:
           java-version: 17
 
       - name: Decode keystore if needed (opcional)
+        if: ${{ secrets.KEYSTORE_BASE64 != '' }}
         run: echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > keystore.jks
-        if: ${{ secrets.KEYSTORE_BASE64 }}
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v3
