--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -33,10 +33,18 @@ jobs:
       - name: Run emulator and tests
         uses: reactivecircus/android-emulator-runner@v2
         with:
-          api-level: 29
-          target: google_apis_playstore
-          arch: x86_64
+          api-level: 30
+          target: google_apis
+          arch: x86
           profile: pixel_5
-          emulator-options: -no-window -gpu swiftshader_indirect -no-audio
+          emulator-options: -no-window -gpu swiftshader_indirect -no-audio -no-snapshot
           disable-animations: true
-          script: ./gradlew connectedDebugAndroidTest
+          script: |
+            adb wait-for-device
+            boot_completed=""
+            while [ "$boot_completed" != "1" ]; do
+              sleep 5
+              boot_completed=$(adb shell getprop sys.boot_completed | tr -d '\r')
+              echo "Waiting for emulator... ($boot_completed)"
+            done
+            ./gradlew connectedDebugAndroidTest
